cmake_minimum_required(VERSION 3.5)

project(src)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../include)

FILE(GLOB PRI_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

FILE(GLOB SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.c)

add_library(clib STATIC ${HEADERS} ${SOURCES})

install(TARGETS clib
RUNTIME DESTINATION "${CMAKE_INSTALL_PREFIX}/bin"
        ARCHIVE DESTINATION "${CMAKE_INSTALL_PREFIX}/lib"
        LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/lib")